# programming-experiments

./: .gitignore  README.md
aido/: README.md  cart_pole_rl.py
chatgpt_retrieval_plugin/: .gitignore  README.md  extract_sentences.py  programming_log.txt  requirements.txt  upload_documents.py
chatgpt_svg_drawer/: .gitignore  README.md  app.py  chatGPT_SVG_drawer.py  requirements.txt
chatgpt_svg_drawer/static/: main.css
chatgpt_svg_drawer/templates/: index.html
flask_blog/: app.py  database.db  init_db.py
flask_blog/templates/: base.html  edit.html  index.html
image_generation/: README.md  generate_circle_images.py  util.py
image_generation/test/: test_additive_gaussian_noise.py  test_gaussian_noise.py
kalman_filters/: README.md  two_gyros_test.py
kd_tree/: README.md  kd_tree.py  quadtree.py
least_cost_graph_solver/: README.md  least_cost_graph_solver.py
marching_squares/: ball.js  index.html  marchingsquares.js  vector2D.js
particle_filter/: README.md  particle.py  particle_filter_main.py
raymarching/: index.html  index2D.html  index3D.html  raymarching2D.js  raymarching3D.js  readme.md
soft_body_physics/: CMakeLists.txt  README.md  physics_sim.cpp
soft_body_physics/include/: box.h  character.h  particle.h  spring.h
soft_body_physics/src/: box.cpp  box2d_drawing_utils.cpp  character.cpp  particle.cpp  spring.cpp
wavefunction_collapse/: .gitignore  CMakeLists.txt  README.md  cell.cpp  main.cpp  tile.cpp
written_digits_gan/: README.md  images_to_video.py  run_tests.sh  test_trained_model.py  written_digits_gan.py
(+34 files in other folders)
